# jat-finetune

./: README.md  pyproject.toml
src/jat_finetune/jat/: jat_dataset_utils.py  modeling_jat.py  processing_jat.py
tests/: test_jat.py
